chore: updates for jvm23
Signed-off-by: Sam Gammon <sam@elide.dev>