@@ -1,6 +1,7 @@
 package benchmark;
 
 import benchmark.experimental.GetStringUTF8Benchmark;
+
 import com.sun.jna.Library;
 import org.openjdk.jmh.annotations.*;
 
@@ -9,6 +10,7 @@ import java.lang.foreign.FunctionDescriptor;
 import java.lang.foreign.MemorySegment;
 import java.lang.invoke.MethodHandle;
 import java.util.function.Consumer;
+import java.nio.charset.StandardCharsets;
 
 import static benchmark.Helper.downcallHandle;
 import static java.lang.foreign.ValueLayout.ADDRESS;
@@ -85,14 +87,14 @@ public class StringConvertBenchmark {
     @Benchmark
     public void passStringToNativePanama() throws Throwable {
         try (Arena arena = Arena.ofConfined()) {
-            acceptString.invokeExact(arena.allocateUtf8String(testString));
+            acceptString.invokeExact(arena.allocateFrom(testString, StandardCharsets.UTF_8));
         }
     }
 
     @Benchmark
     public void passStringToNativePanamaTrivial() throws Throwable {
         try (Arena arena = Arena.ofConfined()) {
-            acceptStringTrivial.invokeExact(arena.allocateUtf8String(testString));
+            acceptStringTrivial.invokeExact(arena.allocateFrom(testString, StandardCharsets.UTF_8));
         }
     }
 
@@ -123,12 +125,12 @@ public class StringConvertBenchmark {
 
     @Benchmark
     public String getStringFromNativePanama() throws Throwable {
-        return ((MemorySegment) getString.invokeExact(length)).reinterpret(Long.MAX_VALUE).getUtf8String(0);
+        return ((MemorySegment) getString.invokeExact(length)).reinterpret(Long.MAX_VALUE).getString(0, StandardCharsets.UTF_8);
     }
 
     @Benchmark
     public String getStringFromNativePanamaTrivial() throws Throwable {
-        return ((MemorySegment) getStringTrivial.invokeExact(length)).reinterpret(Long.MAX_VALUE).getUtf8String(0);
+        return ((MemorySegment) getStringTrivial.invokeExact(length)).reinterpret(Long.MAX_VALUE).getString(0, StandardCharsets.UTF_8);
     }
 
     @Benchmark
